backends/drm: work around HDR screens being stupid about the minimum luminance

Apparently some HDR screens only show the minimum luminance if you send them a value of zero,
instead of the minimum luminance they report in the EDID. To work around that, assume the
minimum value of the transfer function instead of what the screen reports as the minimum.

BUG: 494128


(cherry picked from commit c8849b83c165b2002b59f1a48f0122544efe6c0d)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>